# tree-sitter-flix

./: CMakeLists.txt  Cargo.toml  LICENSE-MIT  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-flix.pc.in
bindings/c/tree_sitter/: tree-sitter-flix.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_flix/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterFlixTests/: TreeSitterFlixTests.swift
src/: grammar.json  parser.c
