[package]
name = "tree-sitter-flix"
description = "Tree-sitter parser for the Flix programming language"
version = "0.1.0"
authors = ["Omar Jatoi <git@omarjatoi.com>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "flix"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/omarjatoi/tree-sitter-flix"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
